dev_appcolor/v1.0/Route/appcolor-dev-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: appcolor
  name: appcolor-dev-route
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: appcolor-dev-svc
    weight: 100
  port:
    targetPort: appcolor-dev-svc-port
  wildcardPolicy: None
